// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorSummary renders description if provided 1`] = `
<div
  aria-describedby="error-summary-heading"
  aria-relevant="all"
  data-testid="error-summary-container"
  id="error-summary-container"
  role="alert"
  tabindex="-1"
>
  <div
    class="t-error-summary border-4 w-full border-red-600 py-8 px-4 sm:px-6 lg:px-8 outline-none"
    data-testid="error-records"
  >
    <h5
      class="text-xl md:text-2xl text-gray-800 font-bold"
      id="error-summary-heading"
    >
      Error Summary
    </h5>
    <div
      class="text-base pt-4"
    >
      <p
        class="mb-4"
        data-testid="paragraph"
      >
        One line of description
      </p>
    </div>
    <div
      class="pl-6"
    >
      <div
        class="flex items-center"
        data-testid="list-element"
      >
        <ul
          class="list-disc ml-4 text-red-600 marker:text-red-600 marker:mr-2 marker:pr-2 space-y-2 marker:leading-snug"
          start="-1"
        >
          <li
            class="underline text-base decoration-solid text-red-600 mb-2.5 last:mb-0 break-words"
          >
            <a
              class="whitespace-pre-wrap"
              data-testid="error-link-0"
              href="#error1"
            >
              Error message 1
            </a>
          </li>
          <li
            class="underline text-base decoration-solid text-red-600 mb-2.5 last:mb-0 break-words"
          >
            <a
              class="whitespace-pre-wrap"
              data-testid="error-link-1"
              href="#error2"
            >
              Error message 2
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`ErrorSummary renders multiple paragraphs of description if provided 1`] = `
<div
  aria-describedby="error-summary-heading"
  aria-relevant="all"
  data-testid="error-summary-container"
  id="error-summary-container"
  role="alert"
  tabindex="-1"
>
  <div
    class="t-error-summary border-4 w-full border-red-600 py-8 px-4 sm:px-6 lg:px-8 outline-none"
    data-testid="error-records"
  >
    <h5
      class="text-xl md:text-2xl text-gray-800 font-bold"
      id="error-summary-heading"
    >
      Error Summary
    </h5>
    <div
      class="text-base pt-4"
    >
      <p
        class="mb-4"
        data-testid="paragraph"
      >
        Multiple lines of description (line 1)
      </p>
      <p
        class="mb-4"
        data-testid="paragraph"
      >
        Multiple lines of description (line 2)
      </p>
    </div>
    <div
      class="pl-6"
    >
      <div
        class="flex items-center"
        data-testid="list-element"
      >
        <ul
          class="list-disc ml-4 text-red-600 marker:text-red-600 marker:mr-2 marker:pr-2 space-y-2 marker:leading-snug"
          start="-1"
        >
          <li
            class="underline text-base decoration-solid text-red-600 mb-2.5 last:mb-0 break-words"
          >
            <a
              class="whitespace-pre-wrap"
              data-testid="error-link-0"
              href="#error1"
            >
              Error message 1
            </a>
          </li>
          <li
            class="underline text-base decoration-solid text-red-600 mb-2.5 last:mb-0 break-words"
          >
            <a
              class="whitespace-pre-wrap"
              data-testid="error-link-1"
              href="#error2"
            >
              Error message 2
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`ErrorSummary renders without crashing 1`] = `
<div
  aria-describedby="error-summary-heading"
  aria-relevant="all"
  data-testid="error-summary-container"
  id="error-summary-container"
  role="alert"
  tabindex="-1"
>
  <div
    class="t-error-summary border-4 w-full border-red-600 py-8 px-4 sm:px-6 lg:px-8 outline-none"
    data-testid="error-records"
  >
    <h5
      class="text-xl md:text-2xl text-gray-800 font-bold"
      id="error-summary-heading"
    >
      Error Summary
    </h5>
    <div
      class="text-base pt-4"
    >
      <p
        class="mb-4"
        data-testid="paragraph"
      />
    </div>
    <div
      class="pl-6"
    >
      <div
        class="flex items-center"
        data-testid="list-element"
      >
        <ul
          class="list-disc ml-4 text-red-600 marker:text-red-600 marker:mr-2 marker:pr-2 space-y-2 marker:leading-snug"
          start="-1"
        >
          <li
            class="underline text-base decoration-solid text-red-600 mb-2.5 last:mb-0 break-words"
          >
            <a
              class="whitespace-pre-wrap"
              data-testid="error-link-0"
              href="#error1"
            >
              Error message 1
            </a>
          </li>
          <li
            class="underline text-base decoration-solid text-red-600 mb-2.5 last:mb-0 break-words"
          >
            <a
              class="whitespace-pre-wrap"
              data-testid="error-link-1"
              href="#error2"
            >
              Error message 2
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;
